# slimax

./: CMakeLists.txt  readme.md
src/: main.cpp  mainwindow.cpp  mainwindow.ui
src/application/: CMakeLists.txt  snail.cpp  snail.h
src/application/model/: Aquarium.cpp  Aquarium.h  Plant.cpp  Plant.h  Snail.cpp  Snail.h
src/application/model/base/: Organism.cpp  Organism.h
src/application/serivce/: AquariumService.cpp  AquariumService.h
src/application/simulation/: SimulationManager.cpp  SimulationManager.h  SimulationStatus.h
src/application/simulation/input/: SimulationContext.cpp  SimulationContext.h
src/application/simulation/output/: IterationResult.cpp  IterationResult.h
src/controller/: mainwindow.cpp  mainwindow.h
src/view/: mainwindow.ui
src/view/img/background/: IMG_SOURCE.txt
src/view/img/plant/: IMG_SOURCE.txt
src/view/model/: AquariumView.cpp  AquariumView.h  Interpolator.h  PlantView.cpp  PlantView.h  SnailView.cpp  SnailView.h
